objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Invoicing Support Process</fullName>
        <description>Related to report billing-related issues and requests process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Invoicing</fullName>
        </values>
        <values>
            <fullName>Follow Up - New Email</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New - Assigned</fullName>
        </values>
        <values>
            <fullName>On Hold - Customer</fullName>
        </values>
        <values>
            <fullName>On Hold - Data Integrity</fullName>
        </values>
        <values>
            <fullName>On Hold - IRT</fullName>
        </values>
        <values>
            <fullName>On Hold - Sales</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LTPonRCO</fullName>
        <description>Used to Support LTP on RCO cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed- Approved</fullName>
        </values>
        <values>
            <fullName>Closed-Rejected</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Resubmitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RCS PO</fullName>
        <description>Related to RCS PO cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed %E2%80%93 RCS PO</fullName>
        </values>
        <values>
            <fullName>Closed - Blanket PO</fullName>
        </values>
        <values>
            <fullName>Closed - RCS PO Inquiry</fullName>
        </values>
        <values>
            <fullName>Escalation</fullName>
        </values>
        <values>
            <fullName>Follow Up - New Email</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold - Customer</fullName>
        </values>
        <values>
            <fullName>On Hold - Internal</fullName>
        </values>
        <values>
            <fullName>PO On-Hold CFS</fullName>
        </values>
        <values>
            <fullName>Waiting PO Doc</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Case Process</fullName>
        <description>This process will be used to handle the cases are for tracking sales cases.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Agent Follow Up</fullName>
        </values>
        <values>
            <fullName>Closed - Community Course Registration</fullName>
        </values>
        <values>
            <fullName>Closed - Group Sales Referal</fullName>
        </values>
        <values>
            <fullName>Closed - Other</fullName>
        </values>
        <values>
            <fullName>Closed - Product Sales Referral</fullName>
        </values>
        <values>
            <fullName>Closed - Red Cross Store</fullName>
        </values>
        <values>
            <fullName>Closed Non Community Course Registration</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Service Case Process</fullName>
        <description>The process for servicing customers at the TSC.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Agent Follow Up</fullName>
        </values>
        <values>
            <fullName>Closed - Invoicing</fullName>
        </values>
        <values>
            <fullName>Closed - Red Cross Store Support - New</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>Closed - Unresolved</fullName>
        </values>
        <values>
            <fullName>Follow Up - New Email</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>New - Assigned</fullName>
        </values>
        <values>
            <fullName>On Hold - Customer</fullName>
        </values>
        <values>
            <fullName>On Hold - Data Integrity</fullName>
        </values>
        <values>
            <fullName>On Hold - Internal</fullName>
        </values>
        <values>
            <fullName>On Hold - Sales Admin</fullName>
        </values>
        <values>
            <fullName>On Hold - Sales Rep</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Social Customer Care Process</fullName>
        <description>Social Customer Service</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Response</fullName>
        </values>
        <values>
            <fullName>Awaiting Internal Action</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Customer Follow Up</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Approval</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Channel_Matching__c</fullName>
        <formula>INCLUDES(Account.PHSS_Channel__c, &quot;RCS Retail&quot;) || INCLUDES(Account.PHSS_Channel__c, &quot;RCS Distributor&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Channel Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Email_Matching__c</fullName>
        <formula>If(Account.Log_In_Email__c==External_LOGIN_EMAIL__c  ||  ISBLANK(External_LOGIN_EMAIL__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <description>The action taken once the Invoicing case is being closed</description>
        <inlineHelpText>Select which action was taken during resolution.</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustment Process</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Document/Copies Sent</fullName>
                </value>
                <value>
                    <fullName>Manual Invoice</fullName>
                </value>
                <value>
                    <fullName>No Accounting Adjustment Needed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Privileges Granted - PO Created</fullName>
                </value>
                <value>
                    <fullName>Unable to Collect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjustment_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adjustment Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Other__c</fullName>
        <inlineHelpText>If Agreement is &quot;other&quot; then Enter the Value here</inlineHelpText>
        <label>Agreement Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <inlineHelpText>Where is current agreement stored?</inlineHelpText>
        <label>Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No Agreement</fullName>
                </value>
                <value>
                    <fullName>Non-Binding</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SAF</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert_Message__c</fullName>
        <formula>If(ISNUMBER(RIGHT( Site_Name1__c , 1)), &apos;Attention! Duplicate site may exist&apos;, null)</formula>
        <label>Alert Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Should_Be__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>The amount the invoice should be per the customer.</inlineHelpText>
        <label>Correct Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <description>To be used in Service Cases with Type Invoicing.</description>
        <inlineHelpText>Record any specific approval comments.</inlineHelpText>
        <label>Approval Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of person approving credit/refund.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <description>To be used in Service Cases with Type Invoicing.</description>
        <inlineHelpText>Record name of person approving the invoice correction.</inlineHelpText>
        <label>Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_RDC_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned To RDC Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoEmailSentDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoEmailSentDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Case_Closure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatic Case Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_Customer_Response_Timestamp__c</fullName>
        <description>Social Care: Timestamp of when an agent posts</description>
        <label>Awaiting Customer Response Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BOS_Approval__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Select approval type</inlineHelpText>
        <label>Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved: Less than $50</fullName>
                </value>
                <value>
                    <fullName>Approved As Is</fullName>
                </value>
                <value>
                    <fullName>Approved With Changes</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Resolution Approval Not Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address_1__c</fullName>
        <label>Billing Address 1</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_2__c</fullName>
        <label>Billing Address 2</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Formula__c</fullName>
        <formula>IF(ISBLANK(Billing_Address_2__c), Billing_Address_1__c, Billing_Address_1__c +&apos; &apos;+ Billing_Address_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <inlineHelpText>Enter new Billing Address.</inlineHelpText>
        <label>Billing Address</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Email__c</fullName>
        <inlineHelpText>Enter new Billing Contact Email.</inlineHelpText>
        <label>Billing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_First_Name__c</fullName>
        <label>Billing Contact First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Last_Name__c</fullName>
        <label>Billing Contact Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <inlineHelpText>Enter new Billing Contact Phone.</inlineHelpText>
        <label>Billing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter new Billing Contact name.</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Country_Code__c</fullName>
        <label>Billing Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Country_Name__c</fullName>
        <label>Billing Country Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
                <value>
                    <fullName>Puerto Rico</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Default_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is intended to be used only via API and the Email Service logic to prevent the Auto Assignment rules from changing the Case owner.</description>
        <label>Billing Default Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Web_Request_Type__c</fullName>
        <label>Billing Web Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR Exception Needed</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy Notice Received</fullName>
                </value>
                <value>
                    <fullName>Change Invoice Delivery Method To Email</fullName>
                </value>
                <value>
                    <fullName>Change Invoice Delivery Method To Portal</fullName>
                </value>
                <value>
                    <fullName>Complete Vendor Forms</fullName>
                </value>
                <value>
                    <fullName>Duplicate Invoice Issue</fullName>
                </value>
                <value>
                    <fullName>Increase Credit Limit</fullName>
                </value>
                <value>
                    <fullName>Invoice Presentation Issue</fullName>
                </value>
                <value>
                    <fullName>Manual Billing Form Submission</fullName>
                </value>
                <value>
                    <fullName>Missing Payment Issue</fullName>
                </value>
                <value>
                    <fullName>Payment Applied To Wrong Invoice/Account</fullName>
                </value>
                <value>
                    <fullName>Refund Credit Balance</fullName>
                </value>
                <value>
                    <fullName>Request Billing/Payment History</fullName>
                </value>
                <value>
                    <fullName>Request Copy Of Invoice Or Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Request Order Details For Invoice</fullName>
                </value>
                <value>
                    <fullName>Request To Pay By ACH</fullName>
                </value>
                <value>
                    <fullName>Restore Invoicing Privileges</fullName>
                </value>
                <value>
                    <fullName>Submit Customer PO Form</fullName>
                </value>
                <value>
                    <fullName>Temporary Collections Hold</fullName>
                </value>
                <value>
                    <fullName>Update Billing Info</fullName>
                </value>
                <value>
                    <fullName>Update Tax Exemption Status</fullName>
                </value>
                <value>
                    <fullName>Wrong Organization Charged</fullName>
                </value>
                <value>
                    <fullName>Wrong Price On Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <label>Billing Zip</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS_Account_Number__c</fullName>
        <formula>Account.CFS_Account_Number_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFS Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS_Customer_Num__c</fullName>
        <formula>Account.CFS_Account_Number_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFS Customer #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS_Customer_Number__c</fullName>
        <inlineHelpText>Required for RCS inquiries (begins with PR). Optional for Training (begins with P).</inlineHelpText>
        <label>CFS Customer #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFS_Error_message__c</fullName>
        <label>CFS Error message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Total_Amount__c</fullName>
        <description>This field is the value found on the Payment Details page of a course record in the &quot;Total&quot; field.</description>
        <inlineHelpText>This field is the value found on the Payment Details page of a course record in the &quot;Total&quot; field.</inlineHelpText>
        <label>CRS Total Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRS__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Insert Course Record Sheet # associated with order/invoice.</inlineHelpText>
        <label>CRS #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Duration__c</fullName>
        <formula>IF ( 
NOT(IsClosed),
TEXT(FLOOR( D2_sub_D1__c)) &amp; &quot; Days &quot; &amp;
TEXT( FLOOR( 24 * ( D2_sub_D1__c - FLOOR(D2_sub_D1__c) ))) &amp; &quot; Hours &quot; &amp;
TEXT( ROUND(60 * (ROUND( 24 * ( D2_sub_D1__c - FLOOR(D2_sub_D1__c) ),8) - FLOOR(
ROUND( 24 * ( D2_sub_D1__c - FLOOR(D2_sub_D1__c) ),8)) ),0)) &amp; &quot; Min&quot;
, &quot;Case is Closed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Custom__c</fullName>
        <formula>IF(Owner:Queue.QueueName != &quot;&quot;, Owner:Queue.QueueName, IF(Owner:Queue.QueueName == &quot;&quot;, Owner:User.Alias, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner (Custom)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>This field is used as a reporting field. Since we have case open record types and case close record types we are using &quot;Buckets&apos;&apos; in the reporting to group them together for readability and using this field as a bucketed field since the standard Record Type field is not available to bucket.</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Type__c</fullName>
        <label>Case Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2017 Rev/Chal Price Change</fullName>
                </value>
                <value>
                    <fullName>2018 AP/LTP Price Increase</fullName>
                </value>
                <value>
                    <fullName>Abandoned in Portal</fullName>
                </value>
                <value>
                    <fullName>AHA Crossover</fullName>
                </value>
                <value>
                    <fullName>Annual AP/LTP Price Increase</fullName>
                </value>
                <value>
                    <fullName>AP/LTP – Blended Learning</fullName>
                </value>
                <value>
                    <fullName>AP/LTP – Classroom</fullName>
                </value>
                <value>
                    <fullName>Application Fee paid</fullName>
                </value>
                <value>
                    <fullName>Application Info sent to customer</fullName>
                </value>
                <value>
                    <fullName>AP Scheduling Tool</fullName>
                </value>
                <value>
                    <fullName>Aquatics Examiner Service.</fullName>
                </value>
                <value>
                    <fullName>Authorized Provider</fullName>
                </value>
                <value>
                    <fullName>Blended Learning</fullName>
                </value>
                <value>
                    <fullName>Blood</fullName>
                </value>
                <value>
                    <fullName>Bridging</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>Canceled CRS</fullName>
                </value>
                <value>
                    <fullName>Cardio</fullName>
                </value>
                <value>
                    <fullName>Certifications</fullName>
                </value>
                <value>
                    <fullName>CEU Class</fullName>
                </value>
                <value>
                    <fullName>Cintas</fullName>
                </value>
                <value>
                    <fullName>CNA Prep Course</fullName>
                </value>
                <value>
                    <fullName>Community Cancellation</fullName>
                </value>
                <value>
                    <fullName>Community Offerings on RCO</fullName>
                </value>
                <value>
                    <fullName>Community Roster</fullName>
                </value>
                <value>
                    <fullName>Complaints</fullName>
                </value>
                <value>
                    <fullName>Compliment</fullName>
                </value>
                <value>
                    <fullName>Correct</fullName>
                </value>
                <value>
                    <fullName>Coupons/Promos</fullName>
                </value>
                <value>
                    <fullName>Course Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Invoice_New_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Invoice New Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_New_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change New Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized Provider</fullName>
                </value>
                <value>
                    <fullName>Licensed Training Partner</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>RCS Distributor</fullName>
                </value>
                <value>
                    <fullName>RCS Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Cleared_Date__c</fullName>
        <description>Used for Service Cases of Type Invoice</description>
        <inlineHelpText>Enter date the check or credit card payment cleared (per customer or document).</inlineHelpText>
        <label>Check Cleared Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <formula>VALUE(CASE(MONTH(DATEVALUE(ClosedDate)), 
1, &quot;31&quot;, 
2, &quot;28&quot;, 
3, &quot;30&quot;, 
4, &quot;30&quot;, 
5, &quot;31&quot;, 
6, &quot;30&quot;, 
7, &quot;31&quot;, 
8, &quot;31&quot;, 
9, &quot;30&quot;, 
10, &quot;31&quot;, 
11, &quot;30&quot;, 
12, &quot;31&quot;,&quot;None&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClosedDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClosedMonth__c</fullName>
        <formula>VALUE( CASE( MONTH( DATEVALUE( ClosedDate )) , 
1, &quot;1&quot;, 
2, &quot;2&quot;, 
3, &quot;3&quot;, 
4, &quot;4&quot;, 
5, &quot;5&quot;, 
6, &quot;6&quot;, 
7, &quot;7&quot;, 
8, &quot;8&quot;, 
9, &quot;9&quot;, 
10, &quot;10&quot;, 
11, &quot;11&quot;, 
12, &quot;12&quot;, &quot;None&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClosedMonth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collections_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is marked from apex code when an inbound email opens a case in salesforce and was sent to collections@redcross.org (the email address is subject to a change)</description>
        <inlineHelpText>This field is marked from apex code when an inbound email opens a case in salesforce and was sent to collections@redcross.org (the email address is subject to a change)</inlineHelpText>
        <label>Collections Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>To be used in Service Cases with Type Invoicing</description>
        <inlineHelpText>Enter Company Name. Should match Account Name except for ARCMG cases.</inlineHelpText>
        <label>Company Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Address Detail</label>
        <referenceTo>Contact_Address_Detail__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Form__c</fullName>
        <description>Related to Contact Form Case Origin field logic</description>
        <label>Contact Form</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Postal_Code__c</fullName>
        <description>This field is being used as a way to capture the postal code during the web to case process. It is over written as soon as a contact is added by a workflow update.</description>
        <label>Contact Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Time_Zone__c</fullName>
        <formula>TEXT(Contact.Time_Zone__c )</formula>
        <inlineHelpText>The time zone is brought in from the contact record associated to this case. To update this field, update the contact.</inlineHelpText>
        <label>Contact Time Zone</label>
        <type>Text</type>
    </fields>
</CustomObject>